src/test/ui/parser/issue-65257-mut-instead-of-let-recovery.rs

#[allow(dead_code)]
fn main() {
    mut n = 0;//~ ERROR invalid variable declaration
    //~^ HELP missing `let`
    mut var;//~ ERROR invalid variable declaration
    //~^ HELP missing `let`
    var = 0;
}
